fixed newsletter mobile spacing#

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -248,7 +248,7 @@ svg.header-logo {
   }
   form {
     @include flex-column-center;
-    margin: 0 12rem;
+    margin: 0 0rem;
     max-width: 42.5rem;
   }
   h3 {
